force-app/main/default/objects/Contact_Info__c/Contact_Info__c.object-meta.xml
<CustomObject>
    <description
  >Contact Info records for the Salesforce Portfolio app.</description>
    <label>Contact Info</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>