force-app/main/default/objects/Contact_Info__c/fields/GitHub__c.field-meta.xml
<CustomField>
    <fullName>GitHub__c</fullName>
    <label>GitHub</label>
    <type>Url</type>
</CustomField>