force-app/main/default/objects/Contact_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>LinkedIn__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contact Info</label>
</ListView>